--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +15,17 @@
             height: 100%;
             background-color: rgba(0, 0, 0, .2);
         }
+
+        /* @media (min-width: 575px) {
+            article {
+                width: 550px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        } */
     </style>
 </head>
+
 <body>
     <canvas id="heart"></canvas>
 
@@ -168,4 +178,5 @@
         else document.addEventListener('DOMContentLoaded', init, false);
     </script>
 </body>
+
 </html>
