--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             background-color: rgba(0, 0, 0, .2);
         }
 
-        /* @media (min-width: 575px) {
+        @media (min-width: 575px) {
             article {
                 width: 550px;
                 margin-left: auto;
                 margin-right: auto;
             }
-        } */
+        }
     </style>
 </head>
 
