--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, .2);
+            margin: auto;
         }
 
         @media (min-width: 575px) {
