--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             var koef = mobile ? 0.5 : 1;
             var canvas = document.getElementById('heart');
             var ctx = canvas.getContext('2d');
-            var width = canvas.width = koef * innerWidth;
-            var height = canvas.height = koef * innerHeight;
+            var width = canvas.width;
+            var height = canvas.height;
             var rand = Math.random;
             ctx.fillStyle = "rgba(0,0,0,1)";
             ctx.fillRect(0, 0, width, height);
